# image-ocr-poc

./: .gitignore  Dockerfile  README.md  demo.py  generate_images.py  pyproject.toml  requirements.txt
.devcontainer/: Caddyfile  Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  format.yaml  sentry.yaml  sonar.yaml
app/: main.py  router.py  schema.py  test_runner.py
app/core/: config.py  logging.py  middleware.py
app/health/: router.py
app/helper/: auth.py
app/helper/graphql/: client.py
app/helper/hasura/: __init__.py  resource.py  schema.py
app/image_generator/: image_generator.py
app/ocr_engine/: base_ocr.py  ocr_manager.py  tesseract_ocr.py
