[project]
name = "fastapi-template"
version = "0.1.0"
description = "MCP Tool Template Project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "aiofiles~=23.1.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.11.1",
    "gql[all]~=3.5.0b5",
    "python-dotenv>=1.0.0",
    "loguru~=0.7.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "pytz"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88 
